--- a/東京兩日遊完整行程-0913.html
+++ b/東京兩日遊完整行程-0913.html
@@ -1,252 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-Hant">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>東京行程 Day 4 & 5 - 吉祥寺、阿美橫丁、新宿、澀谷、銀座</title>
-<style>
-  /* 全局設定 */
-  body {
-    font-family: "Helvetica Neue", Arial, sans-serif;
-    line-height: 1.65;
-    padding: 10px;
-    max-width: 800px;
-    margin: auto;
-    background: #fcfcfc;
-    color: #333;
-  }
-
-  h2 {
-    background-color: #800000;
-    color: #fff;
-    padding: 12px;
-    border-radius: 6px;
-    font-size: 1.5em;
-    margin-top: 30px;
-  }
-
-  h3 {
-    color: #800000;
-    margin-top: 25px;
-    font-size: 1.2em;
-  }
-
-  .time-block {
-    background: linear-gradient(to right, #ffe6e6, #fff5f5);
-    padding: 12px 15px;
-    margin: 18px 0;
-    border-left: 5px solid #800000;
-    border-radius: 6px;
-    box-shadow: 2px 2px 6px rgba(0,0,0,0.08);
-  }
-
-  .subsection {
-    margin-left: 18px;
-    margin-bottom: 12px;
-  }
-
-  .transport {
-    background-color: #fff3e6;
-    padding: 10px;
-    border-left: 5px solid #ff6600;
-    border-radius: 5px;
-    margin-top: 8px;
-    margin-bottom: 12px;
-    font-size: 0.95em;
-  }
-
-  a {
-    color: #800000;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-
-  a:hover {
-    color: #ff3333;
-  }
-
-  a.map-link {
-    display: inline-block;
-    margin-left: 10px;
-    padding: 5px 12px;
-    background-color: #800000;
-    color: #fff;
-    font-size: 0.95em;
-    border-radius: 6px;
-    text-decoration: none;
-    transition: all 0.3s ease;
-    box-shadow: 1px 1px 4px rgba(0,0,0,0.25);
-  }
-
-  a.map-link:hover {
-    background-color: #ff3333;
-    transform: translateY(-2px);
-  }
-
-  .exit-info, .mall-info {
-    font-size: 0.9em;
-    color: #555;
-    margin-bottom: 6px;
-  }
-
-  hr {
-    margin: 35px 0;
-    border-top: 2px solid #800000;
-  }
-
-  /* 手機優化 */
-  @media (max-width: 600px) {
-    body {
-      padding: 8px;
-      font-size: 16px;
-    }
-
-    h2 {
-      font-size: 1.35em;
-    }
-
-    h3 {
-      font-size: 1.1em;
-    }
-
-    .time-block {
-      padding: 10px 12px;
-    }
-
-    a.map-link {
-      font-size: 0.85em;
-      padding: 4px 8px;
-      margin-left: 5px;
-    }
-  }
-</style>
-</head>
-<body>
-
-<h2>東京行程總覽交通（從葛西站出發）</h2>  
-<div class="transport">
-  <strong>Day 4：</strong>葛西 → 吉祥寺 → 新宿 → 葛西<br>
-  <strong>葛西 → 吉祥寺：</strong>東京Metro 東西線 → 大手町轉 JR中央線快速（西行），約 1小時15分，¥550<br>
-  <strong>吉祥寺 → 新宿：</strong>JR中央線快速（東行），約 20–25分，¥200<br>
-  <strong>新宿 → 葛西：</strong>JR中央線快速 → 大手町轉東西線，約 1小時10分，¥550
-</div>
-
-<div class="transport">
-  <strong>Day 5：</strong>葛西 → 阿美橫丁 → 澀谷 → 銀座 → 葛西<br>
-  <strong>葛西 → 阿美橫丁（上野）：</strong>東京Metro 東西線 → 大手町轉千代田線/日比谷線，約 50–60分，¥320<br>
-  <strong>阿美橫丁 → 澀谷：</strong>JR山手線，約 30分，¥200<br>
-  <strong>澀谷 → 銀座：</strong>東京Metro 銀座線，約 20分，¥200<br>
-  <strong>銀座 → 葛西：</strong>銀座線 → 日本橋轉東西線，約 35–40分，¥250
-</div>
-
-<h2>Day 4：吉祥寺 → 新宿（傍晚～晚上）</h2>
-<p>行程規劃與說明</p>
-
-<h3>參考資料</h3>
-<ul class="subsection">
-  <li><a href="https://tokyo.letsgojp.com/archives/491537/" target="_blank">吉祥寺介紹（Let's Go JP）</a></li>
-  <li><a href="https://bobbyfun.tw/kichijoji/" target="_blank">吉祥寺美食與景點（BobbyFun）</a></li>
-  <li><a href="https://www.youtube.com/watch?v=3rVqsgV6WnY" target="_blank">吉祥寺影片 1</a></li>
-  <li><a href="https://www.youtube.com/watch?v=0txLGwrfa-M" target="_blank">吉祥寺影片 2</a></li>
-</ul>
-
-<div class="time-block">
-  <strong>09:00–15:00｜吉祥寺</strong> <a href="https://maps.app.goo.gl/T5enFCAXp5EScwFS9" target="_blank" class="map-link">地圖</a>
-  <div class="exit-info">建議出口：吉祥寺站 北口（SUN ROAD 商店街入口）</div>
-  <div class="mall-info">附近百貨/商場：Lumine、Parco、SUN ROAD 商店街</div>
-  <div class="subsection">
-    <p>• 井之頭恩賜公園：晨間散步，享受自然氛圍，可順道至小池邊拍照。</p>
-    <p>• 商店街與咖啡廳：探索甜品店、麵包店、雜貨小舖，適合悠閒慢逛。</p>
-    <p>• 小食建議：可買烤串、甜甜圈、日式和菓子，邊逛邊吃。</p>
-  </div>
-  <div class="transport">
-    <strong>交通：</strong>從葛西站搭乘 <strong>東京Metro 東西線 → 大手町轉 JR中央線快速（西行）</strong> → 吉祥寺站，約 1小時15分鐘，費用約 ¥550。
-  </div>
-</div>
-
-<div class="time-block">
-  <strong>12:00–13:00｜午餐</strong>
-  <div class="subsection">
-    <p>• 可選擇留在吉祥寺內品嚐日式定食或咖哩飯；</p>
-    <p>• 或搭車前往新宿後再享用簡餐，拉麵或輕食較方便。</p>
-  </div>
-</div>
-
-<h3>新宿</h3>
-<ul class="subsection">
-  <li><a href="https://bobbyfun.tw/2024-02-11-2917/" target="_blank">新宿夜景與美食（BobbyFun）</a></li>
-  <li><a href="https://www.youtube.com/watch?v=AATgSx-JVd0" target="_blank">新宿影片 1</a></li>
-  <li><a href="https://www.youtube.com/watch?v=rRyCHK0DZBg" target="_blank">新宿影片 2</a></li>
-</ul>
-
-<div class="time-block">
-  <strong>16:30–20:00｜新宿</strong> <a href="https://maps.app.goo.gl/hGzDEJmE7ws1Zhcu5" target="_blank" class="map-link">地圖</a>
-  <div class="exit-info">建議出口：東口或西口（歌舞伎町入口在東口附近）</div>
-  <div class="mall-info">附近百貨：小田急、京王百貨、Bic Camera、伊勢丹</div>
-  <div class="subsection">
-    <p>• 百貨公司購物：小田急、京王百貨、Bic Camera 電器賣場。</p>
-    <p>• 夜景＆娛樂：歌舞伎町霓虹燈街景、街頭娛樂氛圍濃厚。</p>
-    <p>• 晚餐建議：可選居酒屋、壽司、燒肉或百貨美食街。</p>
-  </div>
-  <div class="transport">
-    <strong>交通：</strong>從吉祥寺搭乘 <strong>JR中央線快速（東行）</strong> → 新宿站，約 20–25分鐘，費用約 ¥200。<br>
-    返回葛西：新宿搭 <strong>JR中央線快速 → 大手町轉東京Metro 東西線</strong> → 葛西站，約 1小時10分鐘，費用約 ¥550。
-  </div>
-</div>
-
-<hr>
-
-<h2>Day 5：阿美橫丁 → 澀谷 → 銀座</h2>
-<p>行程規劃與說明</p>
-
-<h3>參考資料</h3>
-<ul class="subsection">
-  <li><a href="https://bobbyfun.tw/2024-01-05-2670/" target="_blank">阿美橫丁（BobbyFun）</a></li>
-  <li><a href="https://www.youtube.com/watch?v=yDxaS32g3vU" target="_blank">阿美橫丁影片 1</a></li>
-  <li><a href="https://www.youtube.com/watch?v=ghvdOVYZRVE" target="_blank">阿美橫丁影片 2</a></li>
-</ul>
-
-<div class="time-block">
-  <strong>09:30–11:30｜阿美橫丁（上野）</strong> <a href="https://www.google.com/maps/place/Ueno+Ameyoko+Shopping+Street/@35.7100624,139.7719725,17z/data=!3m2!4b1!5s0x60188e9e494fbd75:0xfba147099d109125!4m6!3m5!1s0x60188f00af83b787:0x654b0a29a45fcf0a!8m2!3d35.7100581!4d139.7745474!16s%2Fm%2F0jt2zd3?entry=ttu&g_ep=EgoyMDI1MDkxMC4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="map-link">地圖</a>
-  <div class="exit-info">建議出口：JR 上野站 中央口</div>
-  <div class="mall-info">附近百貨/景點：上野商店街、松坂屋百貨</div>
-  <div class="subsection">
-    <p>• 市場特色：庶民市場風格，販售平價小吃、海鮮乾貨、藥妝及零食伴手禮。</p>
-    <p>• 適合早晨前往，避免人潮擁擠，還能感受市場熱鬧氛圍。</p>
-  </div>
-  <div class="transport">
-    <strong>交通：</strong>從葛西站搭 <strong>東京Metro 東西線 → 大手町轉千代田線/日比谷線</strong> → 上野站，約 50–60分鐘，費用約 ¥320。
-  </div>
-</div>
-
-<div class="time-block">
-  <strong>11:30–13:30｜澀谷</strong> <a href="https://maps.app.goo.gl/TfBwRVDtioZF4YWXA" target="_blank" class="map-link">地圖</a>
-  <div class="exit-info">建議出口：澀谷站 Hachiko 出口</div>
-  <div class="mall-info">附近百貨：Shibuya 109、Tokyu、Shibuya Hikarie</div>
-  <div class="subsection">
-    <p>• 澀谷十字路口拍照：感受世界知名交叉路口的人潮流動。</p>
-    <p>• 商場購物：Shibuya 109 女裝、Tokyu 電器與時尚商品。</p>
-    <p>• 午餐建議：附近咖啡店、拉麵或日式輕食。</p>
-  </div>
-  <div class="transport">
-    <strong>交通：</strong>從阿美橫丁搭 <strong>JR山手線</strong> → 澀谷站，約 30分鐘，費用約 ¥200。
-  </div>
-</div>
-
-<div class="time-block">
-  <strong>14:00–16:00｜銀座</strong> <a href="https://maps.app.goo.gl/YiY4p2mQXh9E9S4x8" target="_blank" class="map-link">地圖</a>
-  <div class="exit-info">建議出口：銀座站 A2/A3</div>
-  <div class="mall-info">附近百貨：三越、松屋、和光</div>
-  <div class="subsection">
-    <p>• 銀座商圈逛街：高級百貨與精品店林立，街道乾淨整齊。</p>
-    <p>• 下午茶或咖啡：可選擇銀座特色咖啡廳或甜點店。</p>
-    <p>• 若時間充裕，可順道去晴海通、銀座和光拍照。</p>
-  </div>
-  <div class="transport">
-    <strong>交通：</strong>從澀谷搭 <strong>東京Metro 銀座線</strong> → 銀座站，約 20分鐘，費用約 ¥200。<br>
-    返回葛西：銀座搭 <strong>銀座線 → 日本橋轉東西線</strong> → 葛西站，約 35–40分鐘，費用約 ¥250。
-  </div>
-</div>
-
-</body>
-</html>
+TEST
